src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Current_Stage_Age__c</fullName>
        <description>Used in Conga Reprots</description>
        <formula>ROUND(NOW()- Stage_Modified_Date__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <label>Date Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_App_Completed__c</fullName>
        <label>Date App Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_App_Started__c</fullName>
        <label>Date App Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_App_Submitted__c</fullName>
        <label>Date App Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Confirmed__c</fullName>
        <label>Date Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Enrolled__c</fullName>
        <label>Date Enrolled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_File_Closed__c</fullName>
        <label>Date File Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Inquired__c</fullName>
        <label>Date Inquired</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Lead__c</fullName>
        <label>Date Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Prospect__c</fullName>
        <description>Date an Opportunity was set to a Prospect Stage</description>
        <label>Date Prospect</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_App_Started__c</fullName>
        <formula>TODAY() - DATEVALUE(Date_App_Started__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since App Started</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Communication_Inquiry_Date__c</fullName>
        <formula>IF(TODAY() - Communication_Inquiry_Date__c &gt; 0, TODAY() - Communication_Inquiry_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Communication Inquiry Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Confirmed_Date__c</fullName>
        <description>Day count since the confirmed date</description>
        <formula>TODAY() - DATEVALUE(Date_Confirmed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Confirmed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Inquired_Date__c</fullName>
        <formula>TODAY() - DATEVALUE(Date_Inquired__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Inquired Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks Opportunities that were cloned forward from a previously Accepted Opportunity. Originally created to track Acceptance letters in Conga for deferred acceptance students.</description>
        <inlineHelpText>Opportunity was cloned from a previously Accepted Opportunity.</inlineHelpText>
        <label>Deferred Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>St. Paul</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>SemPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Returns the Department from the Academic Program if there is one, otherwise it returns the Department from the Recruitment Program if there is one.</description>
        <formula>/*If an Academic Program exists for the Opportunity, retrieve the associated School/College from the Academic Program Account*/ 
IF(NOT(ISBLANK(Academic_Program__c)),(  Academic_Program__r.Department__r.Name  ), 

/*IF not, retrieve the associated School/College from the Recruitment Program Account on the Opportunity*/ 
(  Recruitment_Program__r.Department__r.Name  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Missing__c</fullName>
        <inlineHelpText>Conditional items that are needed.</inlineHelpText>
        <label>Documents Missing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDA_Program_Account_Id__c</fullName>
        <description>Used in some Automations to help tie the Opportunity to EDA fields.</description>
        <formula>Academic_Program__r.Academic_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDA Program Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Counselor__c</fullName>
        <description>Banner Data</description>
        <label>Financial Aid Counselor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Reaction__c</fullName>
        <label>Financial Aid Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Completely Positive</fullName>
                </value>
                <value>
                    <fullName>2 More Positive</fullName>
                </value>
                <value>
                    <fullName>3 More Negative</fullName>
                </value>
                <value>
                    <fullName>4 Completely Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Inquiry_Source__c</fullName>
        <description>Captures the first lead source when the opportunity record is created. This is set by the Opportunity: Set First Inquiry Source workflow rule.</description>
        <inlineHelpText>The first Lead Source of the Opportunity.</inlineHelpText>
        <label>First Inquiry Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitment_Program__c</fullName>
        <description>Captures the first Recruitment Program when the Opportunity record is created. This is set by the Opportunity: Set First Recruitment Program workflow rule.</description>
        <inlineHelpText>The first Recruitment Program on the Opportunity.</inlineHelpText>
        <label>First Recruitment Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honors_Application__c</fullName>
        <label>Honors Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <description>Used to track various initiatives that we are currently offering. Active values will likely fluctuate over time.</description>
        <label>Initiatives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>$150 Discount</fullName>
                </value>
                <value>
                    <fullName>CAS to CAPS</fullName>
                </value>
                <value>
                    <fullName>Free Laptop</fullName>
                </value>
                <value>
                    <fullName>Letter from Cabinet</fullName>
                </value>
                <value>
                    <fullName>PA to PBN</fullName>
                </value>
                <value>
                    <fullName>Student Connect</fullName>
                </value>
                <value>
                    <fullName>XMS $150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>A date stamp (set by the Opportunity: Set Inquiry Date workflow rule) to capture when an Opportunity is created.</description>
        <inlineHelpText>The date when the Opportunity was created.</inlineHelpText>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Cloned__c</fullName>
        <description>Used in validation rules for Opportunity Key</description>
        <formula>CONTAINS( Opportunity_Key__c , &quot;Cloned&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_International__c</fullName>
        <description>Used for Assignment Rule Engine to work around a bug (4/10/19)</description>
        <formula>Contact__r.Is_International__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Military_Military_Benefits__c</fullName>
        <description>Checks to see if the &quot;Is Military / Military Benefits&quot; field on the contact is set to Yes</description>
        <formula>ISPICKVAL(Contact__r.Is_Veteran__c, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Military / Military Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities from Latest Campaign Source</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likely_to_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Likely to Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The Seminary location</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>St. Paul</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>SemPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_Documents_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, apex will skip this Opportunity and not overwrite the Documents Missing field.</description>
        <label>Lock Documents Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <description>Selected program for a Minor, mostly used for CAPS applicants</description>
        <inlineHelpText>Program selected as a Minor</inlineHelpText>
        <label>Minor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Avatar_URL__c</fullName>
        <label>Mogli Avatar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Default_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Number__c</fullName>
        <externalId>true</externalId>
        <label>Mogli Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mogli Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Music_Scholarship__c</fullName>
        <description>Used to track Music Scholarship Applications</description>
        <label>Music Scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCAA_Interest__c</fullName>
        <description>Used for territory assignments and tracking students being recruited for specific sports.</description>
        <inlineHelpText>The NCAA sport this applicant is interested in playing.</inlineHelpText>
        <label>NCAA Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sports</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Org_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Previous_Application_ID__c)), 
&quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Application_ID__c, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Key__c</fullName>
        <description>A unique external ID text field which determines whether an Interaction will create a new Opportunity or edit an existing Opportunity. Built using the Contact’s 18-digit ID, Career, Term’s 15-digit ID, and Recruitment/Academic Program’s 15-digit ID (if applicable) to ensure uniqueness and support of both a central and decentral recruitment process. Set by the Interactions Processor.</description>
        <externalId>true</externalId>
        <label>Opportunity Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Term_Code__c</fullName>
        <description>Pulls in the term code from the Academic Term. Used for automations.</description>
        <formula>Academic_Term__r.Term__r.Term_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Term Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, TDTM will not run the assignment rules for ownership of an Opportunity.</description>
        <inlineHelpText>Prevents Opportunity Ownership from being automatically assigned.</inlineHelpText>
        <label>Override Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_File_Created__c</fullName>
        <description>The date that EMOps created a Physical File for this Opportunity</description>
        <label>Physical File Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physics_Engineering_Scholarship__c</fullName>
        <description>Used to track the status of Physics and Engineering Scholarship Applications</description>
        <label>Physics/Engineering Scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Scholarship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Delivery_Format__c</fullName>
        <description>The format the student chooses on the Application.</description>
        <label>Preferred Delivery Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Application_ID__c</fullName>
        <description>ID of the Application in our old SF Org. Used to verify data migration. Delete when no longer needed.</description>
        <externalId>true</externalId>
        <label>Previous Application ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Number__c</fullName>
        <label>Primary Source Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workflows from the Application and Contact object will check this field to trigger Opportunity Triggers, which will run the assignment rules. This should happen anytime a field on an App or Contact is edited that the Assignment Rules use as criteria.</description>
        <label>Process Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <description>Used for Conga</description>
        <formula>Academic_Program__r.Program_Name_on_Application__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Conga</inlineHelpText>
        <label>Program Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Notes__c</fullName>
        <description>Notes and other fields from RFI forms.</description>
        <label>RFI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RNL_AFP__c</fullName>
        <label>RNL AFP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNL_CIM_College_Rank__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL CIM College Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_CIM_Interest_Level__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL CIM Interest Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_CIM_Most_Important_Factor__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL CIM Most Important Factor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_CIM_Paying_for_College__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL CIM Paying for College</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_CIM_Score__c</fullName>
        <formula>if(left(RNL_Graded_Bin__c, 1) &lt;&gt; &quot;&quot;, 

IF( 
AND(OR(right(RNL_Graded_Bin__c, 1)=&quot;A&quot;,right(RNL_Graded_Bin__c, 1)=&quot;B&quot;),OR(left(RNL_Graded_Bin__c, 1)=&quot;1&quot;,left(RNL_Graded_Bin__c, 1)=&quot;2&quot;)), 
1, 
IF( 
OR(AND((right(RNL_Graded_Bin__c, 1)=&quot;C&quot;),OR(left(RNL_Graded_Bin__c, 1)=&quot;1&quot;,left(RNL_Graded_Bin__c, 1)=&quot;2&quot;,left(RNL_Graded_Bin__c, 1)=&quot;3&quot;)),AND(OR(right(RNL_Graded_Bin__c, 1)=&quot;A&quot;,right(RNL_Graded_Bin__c, 1)=&quot;B&quot;),(left(RNL_Graded_Bin__c, 1)=&quot;3&quot;))), 
2, 
IF( 
OR(AND((right(RNL_Graded_Bin__c, 1)=&quot;D&quot;),OR(left(RNL_Graded_Bin__c, 1)=&quot;1&quot;,left(RNL_Graded_Bin__c, 1)=&quot;2&quot;,left(RNL_Graded_Bin__c, 1)=&quot;3&quot;,left(RNL_Graded_Bin__c, 1)=&quot;4&quot;)),AND(OR(right(RNL_Graded_Bin__c, 1)=&quot;A&quot;,right(RNL_Graded_Bin__c, 1)=&quot;B&quot;,right(RNL_Graded_Bin__c, 1)=&quot;C&quot;),(left(RNL_Graded_Bin__c, 1)=&quot;4&quot;))), 
3, 
IF( 
OR(AND((right(RNL_Graded_Bin__c, 1)=&quot;E&quot;),OR(left(RNL_Graded_Bin__c, 1)=&quot;1&quot;,left(RNL_Graded_Bin__c, 1)=&quot;2&quot;,left(RNL_Graded_Bin__c, 1)=&quot;3&quot;,left(RNL_Graded_Bin__c, 1)=&quot;4&quot;,left(RNL_Graded_Bin__c, 1)=&quot;5&quot;)),AND(OR(right(RNL_Graded_Bin__c, 1)=&quot;A&quot;,right(RNL_Graded_Bin__c, 1)=&quot;B&quot;,right(RNL_Graded_Bin__c, 1)=&quot;C&quot;,right(RNL_Graded_Bin__c, 1)=&quot;D&quot;),(left(RNL_Graded_Bin__c, 1)=&quot;5&quot;))), 
4, 
IF( 
(right(RNL_Graded_Bin__c, 1)=&quot;F&quot;), 
5, 
IF( 
(right(RNL_Graded_Bin__c, 1)=&quot;G&quot;), 
6, 
IF( 
(right(RNL_Graded_Bin__c, 1)=&quot;H&quot;), 
7, 
IF((right(RNL_Graded_Bin__c, 1)=&quot;I&quot;),8,9) 
) 
) 
) 
) 
) 
) 
) 

, 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RNL CIM Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNL_CIM_Visit_Interest__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL CIM Visit Interest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_F_Score__c</fullName>
        <label>RNL F+ Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_Graded_Bin__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL Graded Bin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RNL_TAG_Planning_to_Apply__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL TAG Planning to Apply</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruit_Type__c</fullName>
        <label>Recruit Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in. A lookup to Program with a filter criteria of Record Type = Recruitment Program. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity for a decentralized recruitment process.</description>
        <inlineHelpText>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in.</inlineHelpText>
        <label>Recruitment Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Recruitment Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities (Recruitment Program)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <description>Used by CAS Admissions to take notes on red flags that Student Life should be aware of.</description>
        <inlineHelpText>Red flags for Student Life to be aware of about this student.</inlineHelpText>
        <label>Red Flags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Credits__c</fullName>
        <description>Banner Data</description>
        <label>Registration Credits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox goes on the &quot;close&quot; screen, and is used to indicate if the file is being Rejected or normally closed.</description>
        <label>Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_For_Registrar__c</fullName>
        <description>The date the file was reviewed for the Registrar</description>
        <label>Reviewed For Registrar</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <description>School / College in which the student is interested</description>
        <inlineHelpText>School / College in which the student is interested</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Going_To_Instead__c</fullName>
        <label>School Going To Instead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary cohort is related to the secondary program offered</description>
        <inlineHelpText>The cohort for the secondary program offered</inlineHelpText>
        <label>Secondary Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Opportunities (Secondary Cohort)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Detail__c</fullName>
        <description>Stage can have a Stage Detail (Substage) to determine where the Opportunity is in the process.</description>
        <inlineHelpText>Stage can have a Stage Detail (Substage) to determine where the Opportunity is in the process.</inlineHelpText>
        <label>Stage Detail</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetName>Stage_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Modified_Date__c</fullName>
        <description>Date/Time field that updates via Workflow whenever a Stage or Stage Detail changes.</description>
        <label>Stage Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Value__c</fullName>
        <description>Calculates a numerical value to more easily compare status</description>
        <formula>CASE( TEXT(Stage_Detail__c),
&apos;Prospect&apos;, 5,
&apos;Inquired&apos;, 10,
&apos;Pre-Applied&apos;, 15,
&apos;App Started&apos;, 20,
&apos;App Submitted&apos;, 25,
&apos;App Completed&apos;, 30,
&apos;Wait Listed&apos;, 35,
&apos;Accepted&apos;, 40,
&apos;Fee Paid&apos;, 45,
&apos;Fee Waived&apos;, 45,
&apos;Registered&apos;, 50,
&apos;Enrolled&apos;, 55,
-1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <description>Combines the status fields into one, used to make the Opportunity validation rules easier.</description>
        <formula>TEXT(StageName)+&quot;:&quot;+TEXT(Stage_Detail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Attributes_in_Banner__c</fullName>
        <description>This field is populated once an applicant&apos;s admissions status is Confirmed and school status is either Fee Paid or Ready to Enroll. Any additional student attributes must be manually entered into Banner when/if this field is populated.</description>
        <inlineHelpText>This field is populated once an applicant&apos;s admissions status is Confirmed and school status is either Fee Paid or Ready to Enroll. Any additional student attributes must be manually entered into Banner when/if this field is populated.</inlineHelpText>
        <label>Student Attributes in Banner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <description>Student Type is a based on several values from the application to determine the type of student. BUILD by program, transfer by if they are transfering data, PSEO by the PSEO question on the application, New is default and New Student Previous PSEO will be done manually</description>
        <label>Student Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BUILD</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>New Student Previous PSEO</fullName>
                </value>
                <value>
                    <fullName>PSEO</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Opportunity_to_Banner_Date__c</fullName>
        <description>This field is managed through a workflow rule and indicates if an applicable change was made to the opportunity record that needs to be sync&apos;d to Banner.</description>
        <label>Sync Opportunity to Banner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync_Opportunity_to_Banner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is managed through a workflow rule and indicates if an applicable change was made to the opportunity record that needs to be sync&apos;d to Banner. Field set to &quot;Y&quot; when sync is needed; set to &quot;N&quot; once sync was completed.</description>
        <label>Sync Opportunity to Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAG_Academic_Interest__c</fullName>
        <label>TAG Academic Interest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Description__c</fullName>
        <description>used by Conga</description>
        <formula>Academic_Term__r.Term_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for Conga</inlineHelpText>
        <label>Term Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date_10__c</fullName>
        <description>Used in Conga reports and some workflows.</description>
        <formula>Academic_Term__r.Term_Start_Date__c - 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Start Date - 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date_255__c</fullName>
        <description>This formula is used in Conga reports and some Welcome Call workflows</description>
        <formula>Academic_Term__r.Term_Start_Date__c + 255</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Start Date + 255</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Data Integrations</description>
        <label>Test Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Detail__c</fullName>
        <label>Withdrawal Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>